# CrabTapestry

./: .dockerignore  .env  .env.dev  .env.prod  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  clippy.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  logs.jsonl  rustfmt.toml
.github/workflows/: docker.yml
crab-data-event/: .env  .env.dev  .env.prod  Cargo.toml  Dockerfile
crab-data-event/examples/: excahnge_announcement_example.rs
crab-data-event/src/: global.rs  lib.rs  main.rs  server.rs
crab-data-event/src/aggregator/: mod.rs  trade_aggregator.rs  types.rs
crab-data-event/src/ingestion/: barter_ingestor.rs  mod.rs  types.rs
crab-data-event/src/server/: data_event_flow.rs  response.rs  routes.rs
crab-data-event/src/server/routes/: handlers.rs
crab-data-event/src/server/routes/handlers/: log_handlers.rs
crab-hmds/: .env  .env.dev  .env.prod  Cargo.toml  Dockerfile  Dockerfile1  diesel.toml  hmds-design.md  subscriptions.toml
crab-hmds/benches/: data_buffer_bench.rs
crab-hmds/config/: hmds.toml
crab-hmds/examples/: generate_market_fill_ranges_example.rs  generate_market_fill_ranges_format_test_example.rs  historical_backfill_service_example.rs  historical_backfill_service_online_example.rs  history_auto_fetcher.rs  ingestor_service_example.rs  load_hmds_config.rs  load_subscriptions.rs  realrtime_ingestor_service_example.rs  validate_kline_continuity_example.rs
crab-hmds/migrations/2025-09-17-150759_ohlcv_record/: down.sql  up.sql
crab-hmds/migrations/2025-09-17-151749_market_backfill_meta/: down.sql  up.sql
crab-hmds/migrations/2025-09-17-151942_market_missing_range/: down.sql  up.sql
crab-hmds/migrations/2025-09-29-122743_hmds_market_fill_range/: down.sql  up.sql
crab-hmds/src/: config.rs  global.rs  lib.rs  main.rs  schema.rs  server.rs
crab-hmds/src/domain/: model.rs  repository.rs  service.rs
crab-hmds/src/domain/model/: market_fill_range.rs  ohlcv_record.rs
crab-hmds/src/domain/repository/: market_fill_range_repository.rs  ohlcv_record_repository.rs
crab-hmds/src/domain/service/: market_fill_range_service.rs  ohlcv_record_service.rs
crab-hmds/src/ingestor/: deduplicator.rs  generate_fill_range.rs  ingestor.info  mod.rs  types.rs
crab-hmds/src/ingestor/buffer/: data_buffer.rs  mod.rs
crab-hmds/src/ingestor/ctrservice/: control_service-01.rs  control_service.rs  mod.rs
crab-hmds/src/ingestor/dedup/: deduplicator.rs  mod.rs
crab-hmds/src/ingestor/historical/: fetcher.rs  mod.rs
crab-hmds/src/ingestor/historical/fetcher/: binance_fetcher.rs
crab-hmds/src/ingestor/realtime/: aggregator.rs  market_data_pipe_line.rs  mod.rs  subscriber.rs
crab-hmds/src/ingestor/realtime/aggregator/: multi_period_aggregator.rs  single_aggregator.rs  trade_aggregator.rs  types-0.rs  types.rs
crab-hmds/src/ingestor/realtime/subscriber/: binance_subscriber.rs
crab-hmds/src/ingestor/scheduler/: back_fill_dag.rs  mod.rs  service.rs
crab-hmds/src/ingestor/scheduler/back_fill_dag/: back_fill_scheduler.rs
crab-hmds/src/ingestor/scheduler/service/: HistoricalBackfillService.rs  back_fill_job.rs  historical_backfill_service.rs  historical_backfill_service_bake.rs  historical_backfill_service_update.rs
crab-hmds/src/ingestor/storage/: mod.rs
crab-hmds/src/macros/: mod.rs  repository_macros.rs  service_macros.rs
crab-hmds/src/server/: ingestor_service_flow.rs  response.rs  routes.rs
crab-hmds/src/server/routes/: handlers.rs
crab-hmds/src/server/routes/handlers/: log_handlers.rs  ohlcv_record_handlers.rs
crab-insight-hub/: Cargo.toml
crab-market-data/: Cargo.toml
crab-strategy/: .env  Cargo.toml
crab-strategy/config/: asset_config.json  strategy_config.json
crab-strategy/examples/: global_config_example.rs
crab-strategy/src/: global.rs  lib.rs  main.rs  server.rs  sever.rs
crab-strategy/src/config/: asset_config.json  strategy_config.rs  system_config.json
crab-strategy/src/data/: cache.rs  market_trade_data.rs  mod.rs  st_ema_data.rs  stema_data.rs
crab-strategy/src/data/cache/: bar_cache_manager.rs  bar_key.rs  series_entry.rs
crab-strategy/src/server/: response.rs  routes.rs  strategy_flow.rs
crab-strategy/src/server/routes/: handlers.rs
crab-strategy/src/server/routes/handlers/: trader_handlers.rs
crab-strategy/src/strategy/: ema_strategy.rs  engine_builder.rs  events.rs  mod.rs
crab-strategy/src/strategy/events/: acount_event.rs  market_event.rs
crab-strategy/src/trader/: crab_trader.rs  mod.rs  monitor.rs
crab-strategy/src/trader/monitor/: rea_time_summary_manager.rs  state_replica_monitor.rs
deploy/: start-all.sh  start-app.sh
deploy/infra/: docker-compose.infra.dev.yml
libs/crab-common-utils/: Cargo.toml
libs/crab-common-utils/src/: env.rs  lib.rs  time_utils.rs
libs/crab-infras/: Cargo.toml
libs/crab-infras/src/: lib.rs  utils.rs
libs/crab-infras/src/aggregator/: mod.rs  trade_aggregator.rs  types.rs
libs/crab-infras/src/cache/: mod.rs  redis_cache.rs  redis_helper.rs
libs/crab-infras/src/cache/bar_cache/: bar_cache_manager.rs  mod.rs  series_entry.rs
libs/crab-infras/src/config/: mod.rs  sub_config.rs  sub_manager.rs
libs/crab-infras/src/db/: mod.rs  mysql.rs
libs/crab-ta4r/: Cargo.toml
libs/crab-ta4r/src/: indicator.rs  lib.rs  rule.rs  types.rs
libs/crab-ta4r/src/indicator/: registry.rs
libs/crab-ta4r/src/meta/: indicator_meta.rs  mod.rs  param.rs  rule_meta.rs  strategy_meta.rs  view.rs
libs/crab-ta4r/src/rule/: typs.rs
libs/crab-ta4r/src/strategy/: mod.rs  registry.rs  strategy_meta.rs  view.rs
libs/crab-types/: Cargo.toml
libs/crab-types/src/: crab_time.rs  lib.rs  time_frame.rs
libs/crab-types/src/bar_cache/: bar_key.rs  mod.rs
