[workspace]
members = [
     # -- Libraries
    "libs/crab-common-utils", "libs/crab-types", "libs/crab-infras",
    # -- Binaries
    "crab-data-event", "crab-hmds",
]
default-members = [
    # -- Libraries
    "libs/crab-common-utils", "libs/crab-types", "libs/crab-infras",
    # -- Binaries
    "crab-data-event", "crab-hmds",
]

resolver = "2"

[workspace.dependencies]
# Web
warp = { version = "0.4", features = ["server"] }
reqwest = { version = "0.12.9",default-features = false, features = ["rustls-tls", "json"] }

# CrabTapestry Ecosystem
crab-common-utils = { path = "libs/crab-common-utils", version = "0.1.0" }
crab-types = { path = "libs/crab-types", version = "0.1.0" }
crab-infras = { path = "libs/crab-infras", version = "0.1.0" }

# Cryto
trade_aggregation = "13.0.1"

# Async
tokio = { version = "1.44.2", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
futures-util = "0.3.31"
crossbeam = "0.8.4"
futures = "0.3.31"
once_cell = "1.21.3"
async-trait = "0.1.86"

# barter-data
barter-data = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local", package = "barter-data" }

# tracing
ms-tracing ={ git = "https://github.com/mountainsea-lab/ms-tracing.git", branch = "main", version = "0.1.6"}

# SerDe Data
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
dashmap = "6.1.0"

# Time
time = { version = "^0.3.41", features = ["serde", "formatting", "parsing"] }
chrono = { version = "0.4.39", features = ["serde"] }

# Error
anyhow = "1.0.95"
thiserror = "2.0.11"