[package]
name = "crab-data-event"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
warp =  { workspace = true }
# CrabTapestry Ecosystem
crab-types = { workspace = true }
crab-common-utils = { workspace = true }
crab-infras = { workspace = true }

# Async
tokio = { workspace = true }
futures-util = { workspace = true }
crossbeam = { workspace = true }
once_cell = { workspace = true }

# barter-data
barter-data = { workspace = true }

# tracing
ms-tracing = { workspace = true }

# SerDe Data
serde = { workspace = true }
serde_json = { workspace = true }
dashmap =  { workspace = true }

# Time
time = {workspace = true}

# Cryto
trade_aggregation = "13.0.1"
# error
anyhow = { workspace = true}
async-stream = "0.3.6"

[[bin]]
name = "crab-data-event"
path = "src/main.rs"