[package]
name = "crab-data-event"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
warp = { version = "0.4", features = ["server"] }
# CrabTapestry Ecosystem
crab-infras = { git = "https://github.com/mountainsea-lab/CrabTapestry.git", branch = "dev", package = "crab-infras" }

# Async
tokio = { version = "1.44.2", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
futures-util = "0.3.31"
crossbeam = "0.8.4"
futures = "0.3.31"
once_cell = "1.21.3"
async-stream = "0.3.6"

# barter-data
barter-data = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local", package = "barter-data" }

# tracing
ms-tracing ={ git = "https://github.com/mountainsea-lab/ms-tracing.git", branch = "main", version = "0.1.6"}

# SerDe Data
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
dashmap = "6.1.0"

# Error
anyhow = "1.0.95"

# env
dotenvy = "0.15"

[[bin]]
name = "crab-data-event"
path = "src/main.rs"