[package]
name = "crab-data-event"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
warp = {workspace = true }
# CrabTapestry Ecosystem
crab-infras = { path = "../libs/crab-infras", default-features = false}

# Async
tokio =  {workspace = true }
futures-util =  {workspace = true }
crossbeam =  {workspace = true }
futures = {workspace = true }
once_cell = {workspace = true }
async-stream =  {workspace = true }

# barter-data
barter-data = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local", package = "barter-data" }

# tracing
ms-tracing ={ git = "https://github.com/mountainsea-lab/ms-tracing.git", branch = "main", version = "0.1.6"}

# SerDe Data
serde_json =  {workspace = true }
serde = {workspace = true }
dashmap =  {workspace = true }

# Error
anyhow =  {workspace = true }

# env
dotenvy =  {workspace = true }

[[bin]]
name = "crab-data-event"
path = "src/main.rs"