[package]
name = "crab-hmds"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
warp =  { workspace = true }

# Async
tokio = {workspace = true, features = ["full"]}
async-trait = {workspace = true}
futures-util = { workspace = true }
crossbeam = { workspace = true }
async-stream = "0.3.6"
once_cell = { workspace = true }

# barter-data
barter-data = { workspace = true }

# tracing
ms-tracing = { workspace = true }

# CrabTapestry Ecosystem
crab-common-utils = { path = "../libs/crab-common-utils", version = "0.1.0" }
crab-types = { path = "../libs/crab-types", version = "0.1.0" }
crab-infras = { path = "../libs/crab-infras", version = "0.1.0", features = ["mysql"] }

trade_aggregation = { workspace = true }

# Error
anyhow = {workspace = true}
thiserror = {workspace = true}

# Time
chrono = {workspace = true}

# SerDe Data
dashmap =  { workspace = true }
serde_json = { workspace = true }
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"

# Db
diesel = { version = "2.2.10", features = ["mysql", "r2d2", "chrono", "extras"] }
md5 = "0.8.0"

# env
dotenvy = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async"] }

[[bench]]
name = "data_buffer_bench"
harness = false
