[package]
name = "crab-hmds"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
warp = { workspace = true }

# Async
tokio = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }

# barter-data
barter-data = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local", package = "barter-data" }

# tracing
ms-tracing ={ git = "https://github.com/mountainsea-lab/ms-tracing.git", branch = "main", version = "0.1.6"}

# CrabTapestry Ecosystem
crab-common-utils = { path = "../libs/crab-common-utils" }
crab-types =  { path = "../libs/crab-types" }
crab-infras = { path = "../libs/crab-infras", features = ["mysql"]}

# Cryto
trade_aggregation = { workspace = true }

# Error
anyhow =  { workspace = true }
thiserror =  { workspace = true }

# Time
chrono =  { workspace = true }

# SerDe Data
serde_json =  { workspace = true }
serde =  { workspace = true }
dashmap =  { workspace = true }
config = "0.13"

rand =  { workspace = true }

# Db
diesel = { workspace = true }
md5 = { workspace = true }

# env
dotenvy = { workspace = true }
toml = "0.5.11"
csv = "1.3.1"
hex = "0.4.3"
tempfile = "3.23.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "data_buffer_bench"
harness = false


[[bin]]
name = "crab-hmds"
path = "src/main.rs"
