[package]
name = "crab-market-data"
version = "0.1.0"
edition = "2024"

[dependencies]
# CrabTapestry Ecosystem
crab-types = { workspace = true }

# Async
tokio = { workspace = true }
futures-util = { workspace = true }
crossbeam = { workspace = true }
futures = { workspace = true }

# barter-data
barter-data = { workspace = true }

# tracing
ms-tracing = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }


# Cryto
trade_aggregation = "13.0.1"