[package]
name = "crab-strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Barter Ecosystem
barter-integration = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local" }
barter-instrument = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local" }
barter-data = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local" }
barter-execution = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local" }
barter = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local" }

# tracing
ms-tracing ={ git = "https://github.com/mountainsea-lab/ms-tracing.git", branch = "main", version = "0.1.6"}

# Time
chrono =  { workspace = true }

# SerDe Data
serde_json =  { workspace = true }
serde =  { workspace = true }

# Data Structures
smol_str = { workspace = true }
rust_decimal ={ workspace = true }
fnv = "1.0.7"

