[package]
name = "crab-strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
tokio =  {workspace = true }

# Barter Ecosystem
barter-integration = { git = "https://github.com/mountainsea-lab/barter-rs.git", branch = "crab-barter" }
barter-instrument = { git = "https://github.com/mountainsea-lab/barter-rs.git", branch = "crab-barter" }
barter-data = { git = "https://github.com/mountainsea-lab/barter-rs.git", branch = "crab-barter" }
barter-execution = { git = "https://github.com/mountainsea-lab/barter-rs.git", branch = "crab-barter" }
barter = { git = "https://github.com/mountainsea-lab/barter-rs.git", branch = "crab-barter" }

# tracing
ms-tracing ={ git = "https://github.com/mountainsea-lab/ms-tracing.git", branch = "main", version = "0.1.6"}

# Time
chrono =  { workspace = true }

# SerDe Data
serde_json =  { workspace = true }
serde =  { workspace = true }

# Data Structures
smol_str = { workspace = true }
rust_decimal ={ workspace = true }
rust_decimal_macros = { workspace = true }
fnv = "1.0.7"
derive_more = { version = "2.0.1", features = [
    "constructor",
    "display",
    "from",
] }

# Error
anyhow =  { workspace = true }
thiserror =  { workspace = true }