[package]
name = "crab-common-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
# CrabTapestry Ecosystem
crab-types = { git = "https://github.com/mountainsea-lab/CrabTapestry.git", branch = "dev", package = "crab-types" }

# Time
time = {workspace = true}
# tracing
ms-tracing = { workspace = true }
