[package]
name = "crab-infras"
version = "0.1.0"
edition = "2024"

[dependencies]
# CrabTapestry Ecosystem
crab-common-utils = { workspace = true }

# redis
bb8 = "0.9.0"
bb8-redis = "0.20.0"

# Async
tokio = { workspace = true }
futures = { workspace = true }

anyhow = { workspace = true}

ms-tracing = { workspace = true }

serde = { workspace = true, features = ["derive"]  }
serde_json = { workspace = true }

time = {workspace = true}
