[package]
name = "crab-infras"
version = "0.1.0"
edition = "2024"

[dependencies]
# CrabTapestry Ecosystem
crab-common-utils = { workspace = true }
# net
reqwest ={workspace = true}

# barter-data
barter-data = { workspace = true }
barter-integration = { git = "https://github.com/ztNozdormu/barter-rs.git", branch = "dev-local", package = "barter-integration" }

# redis
bb8 = "0.9.0"
bb8-redis = "0.20.0"

# Async
tokio = { workspace = true }
futures = { workspace = true }
crossbeam = { workspace = true }


# Error
anyhow = { workspace = true}
thiserror = { workspace = true}
# Log
ms-tracing = { workspace = true }

# Serd
serde = { workspace = true }
serde_json = { workspace = true }
dashmap =  { workspace = true }

# Time
time = {workspace = true}

trade_aggregation = "13.0.1"
async-trait = "0.1.89"

# config
toml =  { workspace = true }
dotenvy = {workspace = true}

# db
diesel = {workspace = true}
