[package]
name = "crab-ta4r"
version = "0.1.0"
edition = "2024"

[dependencies]
# CrabTapestry Ecosystem
crab-types =  { path = "../crab-types" }

# Async
parking_lot = { workspace = true }

# Ta4r
ta4r = { workspace = true } # 指向基础 ta4r 库（指标底层）

# Data Struct
serde = { workspace = true }

# Time
chrono = { workspace = true }
num-traits = { workspace = true }